--- a/bugtracker/src/main/resources/application.properties
+++ b/bugtracker/src/main/resources/application.properties
@@ -26,11 +26,21 @@ spring.main.banner-mode=off
 # Reduce logging level. Set Logging level to warn
 # logging.level.root=warn
 
-logging.level.org.hibernate.SQL=trace
+#logging.level.org.hibernate.SQL=trace # to
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-#logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security=off
+#logging.level.org.springframework.security=DEBUG # to
+#logging.level.org.springframework.security=off
+
+# Okta
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-41258588.okta.com/oauth2/default
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-41258588.okta.com/oauth2/v1/keys
+okta.client.orgUrl=https://dev-41258588.okta.com
+#okta.client.token=007p1rREoEzgP8hQoV3dCEZvXc5iL6ITn5erx8XLGX
+okta.api.token=00fzFuygTFQfHrzatpm0VJbn_JZ5K5WFcVvkp08BPw
+okta.domain=https://dev-41258588.okta.com
 
 
-
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
