Fix Okta and database sync

--- a/bugtracker/src/main/resources/application.properties
+++ b/bugtracker/src/main/resources/application.properties
@@ -1,46 +1,16 @@
+# ===============================
+# GLOBAL SETTINGS
+# ===============================
+
+# Active profile (dev / prod)
+spring.profiles.active=prod
+
+# Application name
 spring.application.name=bugtracker
 
-# spring security
-#spring.security.user.name=admin
-#spring.security.user.password=admin
-
-# DB connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_pz
-spring.datasource.username=user_pz
-spring.datasource.password=pass_pz
+# JDBC driver
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
-
-# Hibernate properties
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
 
-# Reduce logging level. Set Logging level to warn
-# logging.level.root=warn
-
-#logging.level.org.hibernate.SQL=trace # to
-logging.level.org.hibernate.orm.jdbc.bind=trace
-
-#logging.level.org.springframework.security=DEBUG # to
-#logging.level.org.springframework.security=off
-
-# Okta
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-41258588.okta.com/oauth2/default
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-41258588.okta.com/oauth2/v1/keys
-okta.client.orgUrl=https://dev-41258588.okta.com
-#okta.client.token=007p1rREoEzgP8hQoV3dCEZvXc5iL6ITn5erx8XLGX
-okta.api.token=00fzFuygTFQfHrzatpm0VJbn_JZ5K5WFcVvkp08BPw
-okta.domain=https://dev-41258588.okta.com
-
-
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
